@@ -6,6 +6,7 @@
 
 cluster: "kiji://.env/"
 cors: false
+cacheTimeout: 10 # default amount of time in minutes to wait before clearing cache of instances and tables.
 freshening:
   freshen: true          # whether to freshen columns by default
   timeout: 100           # default amount of time in ms to wait for freshening to finish
